--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "symfony/http-client": "5.0.*",
         "symfony/intl": "5.0.*",
         "symfony/mailer": "5.0.*",
+        "symfony/mercure": "^0.3.0",
         "symfony/mercure-bundle": "^0.2.3",
+        "symfony/messenger": "5.0.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.0.*",
         "symfony/orm-pack": "*",
